<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ascii">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <Space
                android:layout_width="15dp"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:fontFamily="@font/alata"
                android:text="@string/txt_btnPantallaAscii"
                android:textAlignment="center"
                android:textColor="#040404"
                android:textSize="30dp" />

            <Button
                android:id="@+id/btnPantallaAscii_10"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="320dp"
                android:layout_height="72dp"
                android:layout_gravity="center"
                android:backgroundTint="#E0EFF1"
                android:fontFamily="@font/alata"
                android:text="@string/txt_btnPantallaAscii_10"
                android:textColor="#040404"
                android:textSize="18dp"
                app:cornerRadius="20dp"
                app:icon="@drawable/pnotas"
                app:iconSize="40dp"
                app:iconTint="@color/cardview_shadow_end_color"
                app:iconTintMode="add" />

            <Button
                android:id="@+id/btnPantallaAscii_04"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="320dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:backgroundTint="#E0EFF1"
                android:fontFamily="@font/alata"
                android:text="@string/txt_btnPantallaAscii_04"
                android:textColor="#040404"
                android:textSize="14dp"
                app:cornerRadius="25dp"
                app:icon="@drawable/pnotas"
                app:iconSize="40dp"
                app:iconTint="@color/cardview_shadow_end_color"
                app:iconTintMode="add" />

            <Button
                android:id="@+id/btnPantallaAscii_05"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="320dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:backgroundTint="#E0EFF1"
                android:fontFamily="@font/alata"
                android:text="@string/txt_btnPantallaAscii_05"
                android:textColor="#040404"
                android:textSize="15dp"
                app:cornerRadius="25dp"
                app:icon="@drawable/pnotas"
                app:iconSize="40dp"
                app:iconTint="@color/cardview_shadow_end_color"
                app:iconTintMode="add" />

            <Button
                android:id="@+id/btnPantallaAscii_07"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="320dp"
                android:layout_height="72dp"
                android:layout_gravity="center"
                android:backgroundTint="#E0EFF1"
                android:fontFamily="@font/alata"
                android:text="@string/txt_btnPantallaAscii_07"
                android:textColor="#040404"
                android:textSize="15dp"
                app:cornerRadius="20dp"
                app:icon="@drawable/pnotas"
                app:iconSize="40dp"
                app:iconTint="@color/cardview_shadow_end_color"
                app:iconTintMode="add" />
            <Button
                android:id="@+id/btnPantallaAscii_08"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="320dp"
                android:layout_height="72dp"
                android:layout_gravity="center"
                android:backgroundTint="#E0EFF1"
                android:fontFamily="@font/alata"
                android:text="@string/txt_btnPantallaAscii_08"
                android:textColor="#040404"
                android:textSize="15dp"
                app:cornerRadius="20dp"
                app:icon="@drawable/pnotas"
                app:iconSize="40dp"
                app:iconTint="@color/cardview_shadow_end_color"
                app:iconTintMode="add" />
            <Button
                android:id="@+id/btnPantallaAscii_09"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="320dp"
                android:layout_height="72dp"
                android:layout_gravity="center"
                android:backgroundTint="#E0EFF1"
                android:fontFamily="@font/alata"
                android:text="@string/txt_btnPantallaAscii_09"
                android:textColor="#040404"
                android:textSize="15dp"
                app:cornerRadius="20dp"
                app:icon="@drawable/pnotas"
                app:iconSize="40dp"
                app:iconTint="@color/cardview_shadow_end_color"
                app:iconTintMode="add" />

            <Space
                android:layout_width="200dp"
                android:layout_height="100dp" />


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>