<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pantallaHerramientas">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <Space
                android:layout_width="15dp"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:fontFamily="@font/alata"
                android:text="@string/txt_btnPantallaHerramientas_titulo"
                android:textAlignment="center"
                android:textColor="#040404"
                android:textSize="30dp" />

            <Button
                android:id="@+id/btnPantallaHerramientas_prefijos"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="320dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:backgroundTint="#E0EFF1"
                android:fontFamily="@font/alata"
                android:text="@string/txt_btnPantallaHerramientas_prefijos"
                android:textColor="#040404"
                android:textSize="18dp"
                app:cornerRadius="25dp"
                app:icon="@drawable/pnotas"
                app:iconSize="40dp"
                app:iconTint="@color/cardview_shadow_end_color"
                app:iconTintMode="add" />

            <Button
                android:id="@+id/btnPantallaHerramientas_tblFisica"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="320dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:backgroundTint="#E0EFF1"
                android:fontFamily="@font/alata"
                android:text="@string/txt_btnPantallaHerramientas_tablasFisica"
                android:textColor="#040404"
                android:textSize="18dp"
                app:cornerRadius="25dp"
                app:icon="@drawable/pnotas"
                app:iconSize="40dp"
                app:iconTint="@color/cardview_shadow_end_color"
                app:iconTintMode="add" />
            <Button
                android:id="@+id/btnPantallaHerramientas_alfabeto"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="320dp"
                android:layout_height="72dp"
                android:layout_gravity="center"
                android:backgroundTint="#E0EFF1"
                android:fontFamily="@font/alata"
                android:text="@string/txt_btnPantallaHerramientas_alfabeto"
                android:textColor="#040404"
                android:textSize="18dp"
                app:cornerRadius="20dp"
                app:icon="@drawable/pnotas"
                app:iconSize="40dp"
                app:iconTint="@color/cardview_shadow_end_color"
                app:iconTintMode="add" />
            <Button
                android:id="@+id/btnPantallaHerramientas_tblEquivalencias"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="320dp"
                android:layout_height="72dp"
                android:layout_gravity="center"
                android:backgroundTint="#E0EFF1"
                android:fontFamily="@font/alata"
                android:text="@string/txt_btnPantallaHerramientas_equivalencias"
                android:textColor="#040404"
                android:textSize="17dp"
                app:cornerRadius="20dp"
                app:icon="@drawable/pnotas"
                app:iconSize="40dp"
                app:iconTint="@color/cardview_shadow_end_color"
                app:iconTintMode="add" />
            <Button
                android:id="@+id/btnPantallAscii"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="320dp"
                android:layout_height="72dp"
                android:layout_gravity="center"
                android:backgroundTint="#E0EFF1"
                android:fontFamily="@font/alata"
                android:text="@string/txt_btnPantallaAscii"
                android:textColor="#040404"
                android:textSize="20dp"
                app:cornerRadius="20dp"
                app:icon="@drawable/pnotas"
                app:iconSize="40dp"
                app:iconTint="@color/cardview_shadow_end_color"
                app:iconTintMode="add" />


        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>