<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondomain"
        android:orientation="vertical"
        >


        <TextView
            android:id="@+id/textView2"
            android:layout_width="412dp"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:text=""
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.094" />


        <Button
            android:id="@+id/btnPantallaCamara"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="285dp"
            android:layout_height="108dp"
            android:layout_gravity="center"
            android:backgroundTint="#E0EFF1"
            android:fontFamily="@font/alata"
            android:text="@string/txt_btnPantallaCamara"
            android:textColor="#040404"
            android:textSize="23dp"
            app:cornerRadius="25dp"
            app:icon="@drawable/pcamara"
            app:iconSize="64dp"
            app:iconTint="@color/cardview_shadow_end_color"
            app:iconTintMode="add"
            app:strokeColor="@color/cardview_dark_background" />

        <Button
            android:id="@+id/btnPantallaAudio"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="285dp"
            android:layout_height="108dp"
            android:layout_gravity="center"
            android:backgroundTint="#E0EFF1"
            android:fontFamily="@font/alata"
            android:text="@string/txt_btnPantallaAudio"
            android:textColor="#040404"
            android:textSize="20dp"
            app:cornerRadius="25dp"
            app:icon="@drawable/voz"
            app:iconSize="64dp"
            app:iconTint="@color/cardview_shadow_end_color"
            app:iconTintMode="add"
            app:strokeColor="@color/cardview_dark_background" />

        <Button
            android:id="@+id/btnPantallaNotas"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="285dp"
            android:layout_height="108dp"
            android:layout_gravity="center"
            android:backgroundTint="#E0EFF1"
            android:fontFamily="@font/alata"
            android:text="@string/txt_btnPantallaNotas"
            android:textColor="#040404"
            android:textSize="23dp"
            app:cornerRadius="25dp"
            app:icon="@drawable/pnotas"
            app:iconSize="64dp"
            app:iconTint="@color/cardview_shadow_end_color"
            app:iconTintMode="add"
            app:strokeColor="@color/cardview_dark_background" />

        <Button
            android:id="@+id/btnPantallaCalendario"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="285dp"
            android:layout_height="108dp"
            android:layout_gravity="center"
            android:backgroundTint="#E0EFF1"
            android:fontFamily="@font/alata"
            android:text="@string/txt_btnPantallaCalendario"
            android:textColor="#040404"
            android:textSize="22dp"
            app:cornerRadius="25dp"
            app:icon="@drawable/pcalendario"
            app:iconSize="64dp"
            app:iconTint="@color/cardview_shadow_end_color"
            app:iconTintMode="add"
            app:strokeColor="@color/cardview_dark_background" />

        <Button
            android:id="@+id/btnPantallaHerramientas"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="285dp"
            android:layout_height="108dp"
            android:layout_gravity="center"
            android:backgroundTint="#E0EFF1"
            android:fontFamily="@font/alata"
            android:text="@string/txt_btnPantallaHerramientas"
            android:textColor="#040404"
            android:textSize="20dp"
            app:cornerRadius="25dp"
            app:icon="@drawable/pherramientas"
            app:iconSize="64dp"
            app:iconTint="@color/cardview_shadow_end_color"
            app:iconTintMode="add"
            app:strokeColor="@color/cardview_dark_background" />

    </LinearLayout>

</LinearLayout>